--- a/02.01-Channels Introduction.md
+++ b/02.01-Channels Introduction.md
@@ -15,10 +15,10 @@ Discount for unprofitable organizations: Twilio offer US$ 500 in credits and 25%
 **Android Phone(SMS):** The Android Phone channel uses our Android Free App to transform your phone in a message transmitter to your RapidPro account. When your RapidPro account sends a message, your cell phone will be notified. The cell phone will send a message using your local number and your name. If someone answers this message, the cell phone will retransmit the message to your RapidPro account. You can send until 330 messages by an hour. 
 
 ### Good for who:
-Want to send a message immediately;
-Are developing a service that is waited to send more than 330 messages per hour;
-Want to implement in a country where the virtual numbers and shortcodes are not available yet.
-Transmitter tax is a message per second.
+- Want to send a message immediately;
+- Are developing a service that is waited to send more than 330 messages per hour;
+- Want to implement in a country where the virtual numbers and shortcodes are not available yet.
+- Transmitter tax is a message per second.
 
 ### Sending Bulk:
 This channel is ideal for Android channels implementations that need to send more than 330 messages per hour. It implicates in to create and connect a Nexmo account for your RapidPro account. When you habilitated the Sending Bulk, Nexmo will take care of your sending messages, keeping the sender identification in your Android Cell Phone, and your Android will take care of the received messages. The transfer tax is a message per second. Click here to get more information about the Nexmo development in your country.
