--- a/02.01-Channels Introduction.md
+++ b/02.01-Channels Introduction.md
@@ -1,3 +1,4 @@
+<div class="align-justify>
 <p> Channels allow you to send and receive messages and calls through the plataform, you can connect how many channels as you want. Each channel has a different transfer tax (amount of messages sent by second.</p>
 
 ### Channels Type
@@ -36,3 +37,4 @@ Connect your twitter account and send up to 1000 direct messages per day through
 The API channel allows sending and receiving messages through external suppliers (there are more APIs not listed when the user wants to add a channel). This could be a chat/external message service or an aggregator not listed (although we are inclined to integrate with the case have a compromise of at least 100.000 credits). 
 For example, if you want to enjoy the automationRapidPro provides through an external service, you could write a link to your system and connect them through your API. RapidPro external, then, send and receive messages between the external service.
 As your contacts have the URN, type how your channel was configured, we will send messages using an extreme point to configure.
+</div>
