Update 02.04-Deleting a Channel.md

--- a/02.04-Deleting a Channel.md
+++ b/02.04-Deleting a Channel.md
@@ -1,4 +1,4 @@
-To delete to your account, you should:
+**To delete to your account, you should:**
 
 1. Click on the account button located on the top right;
 
