Update 02.03- Adding Channels.md

--- a/02.03- Adding Channels.md
+++ b/02.03- Adding Channels.md
@@ -1,19 +1,19 @@
-To add channels to your account, you should:
+**To add channels to your account, you should:**
 
-- Click on your account on the top right of the page;
-
-INSERT A PRINT
-
-- Click on the gear icon;
+1. Click on your account on the top right of the page;
 
 INSERT A PRINT
 
-- Click on the Add Channel button;
+2. Click on the gear icon;
 
 INSERT A PRINT
 
-- You will see a list with all channels available at the moment;
+3. Click on the Add Channel button;
 
 INSERT A PRINT
 
-- Choose the channel(s) that you want to add.
+4. You will see a list with all channels available at the moment;
+
+INSERT A PRINT
+
+5. Choose the channel(s) that you want to add.
