Update 12.01- Facebook Channel.md

--- a/12.01- Facebook Channel.md
+++ b/12.01- Facebook Channel.md
@@ -48,7 +48,7 @@ After this procedure, an Access Token will be generated, which will be configure
 
 INSERT A PRINT
 
-***Step 3 – Linking the app to RapidPro to create the channel***
+**Step 3 – Linking the app to RapidPro to create the channel**
 With the Page Access Token, open the properties of your Org in the plataform (click the Org name in the upper right corner of the screen) and then select the add channel option.
 
 INSERT A PRINT
