--- a/04.03- Add, Edit and Priorize the Contacts Addresses.md
+++ b/04.03- Add, Edit and Priorize the Contacts Addresses.md
@@ -3,17 +3,17 @@ The contacts addresses are a kind of contact field as name and groups. The conta
 INSERT A PRINT
 
 The “Add Connection” menu provides an entry that you can add a lot of kinds of connections. You can add just one call per time. The arrow pointing to the top located on the right of the address field is what you will use to prioritize the contacts address.
-The RapidPro of your contact recognize the first address as the most import, that is a good indicator for the out messages. Let's imagine that your account has a phone number, Twitter and Telegram channels connected and you are going to send messages to 3 contacts, each one with a different priority.
-The channel that corresponds to the address priority of each contact that will send them a message. In other words, if you have 3 channels of solicitation message process of 1 sent; your Twitter channel will send for the contacts with priority on this channel, your Telegram channel will send for the contacts with priority on this channel, and the process repeats for all channels. On the contrary, the channel priority behavior still the same: the contact address priority will dictate what kind of messages the contact will receive.
+The plataform recognize the first address as the most import, that is a good indicator for the out messages. Let's imagine that your account has a phone number, Twitter and Telegram channels connected and you are going to send messages to 3 contacts, each one with a different priority.
+The channel that corresponds to the address priority of each contact that will send them a message. In other words, if you have 3 channels of solicitation message process of 1 sent; your Twitter channel will send for the contacts with priority on this channel, your Telegram channel will send for the contacts with priority on this channel, and the process repeats for all channels. On the contrary, the channel priority behavior still the same: the priorized contact address will dictate what kind of messages the contact will receive.
 
 INSERT A PRINT
 
 If you have a lot of channels in the same category connected on your account, the last channel used by your contact will be prioritized. The contacts will be connected to a relationship with a specific channel (they will just receive the messages from this channel) if each of these conditions happens:
-You have a lot of channels of the same type connected with your account. 
-Prioritize the type of contacts address corresponds with the type of the channel (for example, phone number) that have a lot of channels (for example, different phone numbers). 
-The contact starts the contact through a received message.
-Using a Imported Contact
-The contacts can be imported with a different address, but just an address for each type.
+- You have a lot of channels of the same type connected with your account. 
+- Prioritize the type of contacts address corresponds with the type of the channel (for example, phone number) that have a lot of channels (for example, different phone numbers). 
+- The contact starts the contact through a received message.
+- Using a Imported Contact
+- The contacts can be imported with a different address, but just an address for each type.
 
 INSERT A PRINT
 
@@ -23,10 +23,7 @@ UUIDs contacts can be acquired through contacts exportations (UUIDs are included
 
 INSERT A PRINT
 
-RapidPro will return all the information associated with your contact (s), including your UUID(s).
+The plataform will return all the information associated with your contact (s), including your UUID(s).
 
-Replacing Addresses
+**Replacing Addresses**
 At this moment, the contacts addresses only can be replaced through the contacts API endpoint or through a contact profile mentioned above.
-
-
-
