Update 04.06-Editing the Fields Value.md

--- a/04.06-Editing the Fields Value.md
+++ b/04.06-Editing the Fields Value.md
@@ -1,3 +1,5 @@
+#### Editing Standard Fields ####
+
 Standard fields can be added and edited manually through the “Actualize” button located into the profile page. Default fields contain name, groups and contacts addresses. To access “Actualize Contact”, go to a contact profile page and select the “Edit” option on the configure menu.
 
 INSERT A PRINT
