--- a/04.07-Looking for Contacts.md
+++ b/04.07-Looking for Contacts.md
@@ -1,27 +1,27 @@
 Besides searching contacts for the name or phone number, you can consult using the consult menu bar located on the contacts guide to look for contacts on the contacts field value base.
 
-Consulting
-The consults that you did will operate all contacts fields presents in your account. Notice that the fields and values are not case sensitive (do not differ capital letters and lowercase) on the consult.
+#### Consulting ####
+The consults that you will do, operates all contacts fields presents in your account. Notice that the fields and values are not case sensitive (do not differ capital letters and lowercase) on the consult.
 
 INSERT A PRINT
 
-Operators
+#### Operators ####
 On the consult demonstrated above, there is a reference to a contact field called “Age” and using the operators “more or equals to ” “> =” and “minor or equals to” ‘<=’ to specify the wanted characteristics of the contacts that you are looking for. Look that, with the contacts fields that contain two or more words, the spaces need to be replaced for underline, for example, id_number = 409328.
 
-Variables
+#### Variables ####
 You can use ‘OR’ to combine two or more contact field value, and ‘AND’ to filter for contacts fields. For example:
 (City = “Maceió” or City = “Aracaju”), will return just contacts that the  ‘City’ value is “Maceió” or “Aracaju”;
 (City = “Maceió” and Gender = “Male”), will return just contacts that the  ‘City’  value is “Maceió” and “Gender” value is “Male”.
 
-Fields Type
+#### Fields Type #### 
 The text values containing a lot of words should be placed between quotation marks, for example, city = “São Paulo”, while the operators are like “> =” only works with numerical numbers or date/time.
 
 INSERT A PRINT
 
-Dynamic Groups
+#### Dynamic Groups ####
 Dynamic groups are formed by the consults resulting. Dynamic groups are the only ones that still adding contacts automatically if the contacts corresponding to the created consult.
 
-Creating a Dynamic Group
-When you insert the consult, the ilhapush will return the contacts group that match with him. You can save this group clicking on the  “Save as a Group” button below the search bar.
+#### Creating a Dynamic Group ####
+When you insert the consult, the platform will return the contacts group that matches with its. You can save this group clicking on the  “Save as a Group” button below the search bar.
  
 INSERT A PRINT
