--- a/04.08-Configuring the Contact Language.md
+++ b/04.08-Configuring the Contact Language.md
@@ -1,15 +1,13 @@
-The Ilhapush allows defining the languages preferences for your contacts. When defined, these are the languages that your contacts will receive the messages.
+The platform allows defining the languages preferences for your contacts. When defined, these are the languages that your contacts will receive the messages.
 
-Contacts Guide
-
-To define the contact language preferences through the “Contacts” guide:
+** To define the contact language preferences through the “Contacts” guide: **
 1. Go to the “contacts” guide, after that, click on the contact that you want to actualize;
 2. Click on the gear icon and select the “Edit” option.
 3. The “Actualize Contact” box will appear. Click on the “Language” menu to select the primary and secondary languages, click on  “Save Changes”
 
 INSERT A PRINT
 
-Notice that:
+** Notice that: ** 
 1. The standard contact language field represents the favorite language is visible through the path: go to contacts guide>click on contact > click on the gear icon> select Edit. The language preference can be referred using the variable @contact.language, returning your ISO 639-2/b standard nomenclature (Spanish become ‘spa’).
 2. You will need to translate your flows in each language that was added to your account.
 
