--- a/04.09-Importing Contacts.md
+++ b/04.09-Importing Contacts.md
@@ -13,13 +13,13 @@ INSERT A PRINT
 
 **To import contacts:**
 
-1- Go to Contacts;
-2- Click on “Import Contacts” button;
+1. Go to Contacts;
+2. Click on “Import Contacts” button;
 
 INSERT A PRINT
 
-3- Download and edit the provided model (or you can choose your file) and send using the button “Choose a file”;
-4- Confirm all personalized fields presents on your importation spreadsheet and choose the type of the field: Text, Number, Date/Time. Certify to verify the box(s) correspondents to the field that you want to import.
+3. Download and edit the provided model (or you can choose your file) and send using the button “Choose a file”;
+4. Confirm all personalized fields presents on your importation spreadsheet and choose the type of the field: Text, Number, Date/Time. Certify to verify the box(s) correspondents to the field that you want to import.
 
 INSERT A PRINT
 
