--- a/04.10- Types of Contacts and Variables.md
+++ b/04.10- Types of Contacts and Variables.md
@@ -8,14 +8,14 @@ You have a lot of different channels of the same type connected to your account.
 The priority of the address contacts corresponds to a type of channels (for example, phone number) that has multiple channels (for example, different phone numbers). 
 The contact started the contact through a received message.
 
-Contacts Variable: The variables @contac represents contacts values fields specifics for each contact presented on the flow.
-@Contact - The contact complete name if exists, if don't, your number, for example, “Ben Haggerty”.
-@Contact.name – As above, the contact complete name if exists, if don't, your number, for example, “Ben Haggerty”.
-@Contact.first_name – The contacts first name, if it was defined, if don't, the phone number, for example, “Ben”.
-@Contact.tel – The contact phone number on a legible format, for example, “(206) 555 1212”.
-@Contact.tel_e164 - The contact phone number on the E167 format, for example, “+12065551212”.
-@Contact.groups - The groups where the contact was inserted.
-@Contact.uuid - The exclusive identification universally attributed to each contact.
-@Contact[Contact-field] - Any contact field that you created for your contacts, for example, “@Contact.age”.
+**Contacts Variable:** The variables @contact represents contacts values fields specifics for each contact presented on the flow.
+** @Contact - The contact complete name if exists, if don't, your number, for example, “Ben Haggerty”.
+**@Contact.name – As above, the contact complete name if exists, if don't, your number, for example, “Ben Haggerty”.
+**@Contact.first_name – The contacts first name, if it was defined, if don't, the phone number, for example, “Ben”.
+**@Contact.tel – The contact phone number on a legible format, for example, “(206) 555 1212”.
+**@Contact.tel_e164 - The contact phone number on the E167 format, for example, “+12065551212”.
+**@Contact.groups - The groups where the contact was inserted.
+**@Contact.uuid - The exclusive identification universally attributed to each contact.
+**@Contact[Contact-field] - Any contact field that you created for your contacts, for example, “@Contact.age”.
 
 INSERT A PRINT
