Update 04.10- Types of Contacts and Variables.md

--- a/04.10- Types of Contacts and Variables.md
+++ b/04.10- Types of Contacts and Variables.md
@@ -1,12 +1,10 @@
-Types of channels and types of contact addresses
-
 INSERT A PRINT
 
 The table above maps each type of channel with their type of contacts address correspondents. Each contact can have different addresses of the same type (for example, multiple numbers of phone number). The contacts address priority will show which type of channel will send messages for a contact. If you have a lot of different channels of the same type connected to your account, the last channel with an initialized contact will be prioritized. The contacts can be connected to a relationship with a specific channel (they will receive messages just from this channel) under three conditions:
 
-You have a lot of different channels of the same type connected to your account.
-The priority of the address contacts corresponds to a type of channels (for example, phone number) that has multiple channels (for example, different phone numbers). 
-The contact started the contact through a received message.
+1. You have a lot of different channels of the same type connected to your account.
+2. The priority of the address contacts corresponds to a type of channels (for example, phone number) that has multiple channels (for example, different phone numbers). 
+3. The contact started the contact through a received message.
 
 **Contacts Variable:** The variables @contact represents contacts values fields specifics for each contact presented on the flow.
 **@Contact -** The contact complete name if exists, if don't, your number, for example, “Ben Haggerty”.
