Update 05.02- Creating a Group.md

--- a/05.02- Creating a Group.md
+++ b/05.02- Creating a Group.md
@@ -7,3 +7,11 @@
 3. Give to your group a name and click on the box “Create”. The new group will appear in the group directory on the bottom left of the page.
 
 #### How to create a group through a flow ####
+
+#### How to delete a group manually ###
+
+1. Go to “Groups” guide;
+2. Click on the group that you want to delete;
+2. Select the option “Delete Group” on the drop-down menu clicking on the gear icon.
+
+INSERT A PRINT
