Update 05.02- Creating a Group.md

--- a/05.02- Creating a Group.md
+++ b/05.02- Creating a Group.md
@@ -15,3 +15,5 @@
 2. Select the option “Delete Group” on the drop-down menu clicking on the gear icon.
 
 INSERT A PRINT
+
+#### How to delete a group through a flow ####
