Update 06.01-Introduction to Flow.md

--- a/06.01-Introduction to Flow.md
+++ b/06.01-Introduction to Flow.md
@@ -60,7 +60,7 @@ When someone is at this point in the flow, wait for an answer. If the answer con
 
 *Flow context comprehends the available variables on a determined flow. These are the flow variables used by action commands, but you can add contacts variables associated with a contact used through a flow, or data obtained from an external font through a webhook.
 
-Flow members
+#### Flow members ####
 Flows are exclusive spaces where your contacts will get in and get out. When the contact is on the flow, it becomes a flow active member until the contact goes out of the flow. Passages through flow from entry to exit - it is all activity that happens in the middle- constitutes a “race”. Races and activities happened into the flow are exposed as a flow result. “Races” flow can be listed and started externally through an API.
 The active members' number is represented by the blue button located on the top left of each rule set.
 
@@ -70,8 +70,7 @@ You can click on the icon to see the active contacts names on this step and, if 
 
 INSERT A PRINT
 
-Getting in a Flow
-The contacts can get in the flows in different ways:
+#### Getting in a Flow ####
 You can put them in a flow using the button “Start the Flow” on the flows editor; 
 They can put contacts on a flow started by a campaign event;
 They can start a flow through a trigger.
@@ -88,7 +87,7 @@ If the flow participation expired after a determined time of definitely inactivi
 
 INSERT A PRINT
 
-Members Rules Flow
+#### Members Rules Flow ####
 The contacts will interact with a flow one-by-one. If contact is simultaneously located in more than one flow, the answers will be processed in the most recent flow. While a contact is active in a flow, the answers are processed exclusively for the active flow on the moment until the user goes out or the time limit.
 The Best Edition Practices
 (1) Keep the proportion of 1:1 Answer/Message
