--- a/05.04-Dynamic Groups.md
+++ b/05.04-Dynamic Groups.md
@@ -1,4 +1,4 @@
-Resulting consults groups are called dynamics groups. Dynamic groups are the only ones that still have contacts added automatically if the contacts corresponding to the consult.
+Resulting consults groups are called dynamics groups. Dynamic groups are the only ones that still have contacts added automatically if the contacts correspond to the consult.
 
 #### Creating a Dynamic Group ####
 When you insert a consult, the platform will return the contacts groups resulted. You can save this new group clicking on “Save as a Group” button, located under the search bar.
