--- a/06.01-Flow Introduction.md
+++ b/06.01-Flow Introduction.md
@@ -22,7 +22,7 @@ INSERT A PRINT
 
 #### RuleSet ####
 
-**Rule Sets are connection points in a flow. They are conditionals declarations that allow to direct your contacts using:**
+**Rule Sets are connection points in a flow. They are conditionals declarations that allow you to direct your contacts using:**
 - A received or recorded message
 - A contact field
 - A flow variable
@@ -44,12 +44,15 @@ INSERT A PRINT
  - “Split by contact field”: Executes the answer rules saved in a contact field (name, phone number, etc.), referred using @contact.variable[variable name], for example, @contact.State.
  - “Split by expression”: Execute answer rules using the expression result, as @(REMOVE_FIRST_WORD (step.value)), it includes a function that removes the first word of the last received message, represented by @step.variable.value. Expressions can include only one variable, only one function or a combination of variables and functions.
  - “Split by message form”: Execute answers rules about a value split by a delimiter, for example, 1 + 2 + 3 + 4 + 5 (+ is the delimiter, while 1 is the first value, 2 is the second value, 3 is the third value, etc.).
+
 2. Depending on the type of the command selected, this is the value that the rules are going to be evaluated. This value, requires an operator, represents a variable or an expression. On the rule set on the picture below, “If the message..” indicates that the operator is @step.value or a received message.
+
 3. “Response Rules”: evaluate the selected operator. Response Rules are executed from left to right. The first rule correspondent starts. RapidPro combines one word per time and just one individually rule on the original string order. 
 
 INSERT A PRINT
 
 4. The answer rules value(s) will try to correspond the operator. Looking the example above, we create a rule set that tries to correspond to the cities from Alagoas. Using the “Wait for response” rule set the answer selected “has any of these words”, the received answers will be placed on the category named  “Alagoas” if this corresponds to some listed word. This allows us to place the answer “I live in Maceió” on the category “Alagoas” because the word “Maceió” is contained on the rule. Notice that flow will always be correspondent at least one rule.
+
 5. The category where the contacts are located if the answer corresponds to a correspondent answer rule. The categories are the way where the connections can be guided to new steps, orienting the contact.
 
 INSERT A PRINT
@@ -71,30 +74,31 @@ You can click on the icon to see the active contacts names on this step and, if 
 INSERT A PRINT
 
 #### Getting in a Flow ####
-You can put them in a flow using the button “Start the Flow” on the flows editor; 
-They can put contacts on a flow started by a campaign event;
-They can start a flow through a trigger.
-A contact started a flow calling to a telephone number on its channel.
-A flow is started for a lost call;
-A contact started by a flow through a message send for your channel that is not processed in another place.
+**You can put them in a flow using the button “Start the Flow” on the flows editor;**
+- They can put contacts on a flow started by a campaign event;
+- They can start a flow through a trigger.
+- A contact started a flow calling to a telephone number on its channel.
+- A flow is started by a lost call;
+- A contact started by a flow through a message send for your channel that is not processed in another place.
 
-Getting out a flow
-A contact will get out of a flow when:
-Completes a flow finishing the last step;
-Passes for a step that don't have a continuation;
-Passe for an action that starts another flow;
-If the flow participation expired after a determined time of definitely inactivity on the flow dialog actualization into the flow editor.
+#### Getting out a flow ####
+**A contact will get out of a flow when:**
+- Completes a flow finishing the last step;
+- Passes for a step that don't have a continuation;
+- Passe for an action that starts another flow;
+- If the flow participation expired after a determined time of definitely inactivity on the flow dialog actualization into the flow editor.
 
 INSERT A PRINT
 
 #### Members Rules Flow ####
 The contacts will interact with a flow one-by-one. If contact is simultaneously located in more than one flow, the answers will be processed in the most recent flow. While a contact is active in a flow, the answers are processed exclusively for the active flow on the moment until the user goes out or the time limit.
-The Best Edition Practices
-(1) Keep the proportion of 1:1 Answer/Message
+
+**The Best Edition Practices**
+1. Keep the proportion of 1:1 Answer/Message
 The campaign's events exception are escalated for each individual contact, flows should correspond to each received message for a send message, and the opposite.
-(2) Build horizontally 
+2. Build horizontally 
 We recommend building a vertical flow. The flow editor is projected to support the horizontal movement until a point but will expand indefinitely vertically.
-(3) Segment your Flows
+3. Segment your Flows
 If the flow is very large, consider dividing it in other flows using the rule command “Start another flow”.
 
 INSERT A PRINT
