--- a/06.03-Creating a New Flow.md
+++ b/06.03-Creating a New Flow.md
@@ -2,18 +2,19 @@ To create a flow, go to the guide “flows” and click on the button “Create 
 
 INSERT A PRINT
 
-The dialog box “Create a Flow” will appear, so you can:
-Define the flows name;
-Attribute keyword triggers;
-Specify how much time the contacts still inactive on the flow before being deleted.
-Select the type of flow that you would like to create;
-Define the language that you will edit it.
+**The dialog box “Create a Flow” will appear, so you can:**
+- Define the flows name;
+- Attribute keyword triggers;
+- Specify how much time the contacts still inactive on the flow before being deleted;
+- Select the type of flow that you would like to create;
+- Define the language that you will edit it.
 
 When the adequate attributes are defined, click on the “Create” button to go to the flow editor.
-Best Edition Practices 
-(1) Build Horizontally
+
+**Best Edition Practices**
+1. Build Horizontally
 While the flow builds, we recommend drawing your flow vertically. The flow editor is projected to support the horizontal movement until a point but will permit the vertical movement indefinitely.
-(2) Segment your Flow
+2. Segment your Flow
 If the flow that you want to build is large, consider dividing it in various flows using a rule set to start other flow action.
 
 INSERT A PRINT
