--- a/06.04-Know the Flow Editor.md
+++ b/06.04-Know the Flow Editor.md
@@ -1,11 +1,13 @@
 INSERT A PRINT
 
-Flow Editor Anatomy
+#### Flow Editor Anatomy ####
 
-1. Name
+**1. Name**
+
 The given name to the created flow.
 
-2. Create Message
+**2. Create Message**
+
 This button opens the steps editors, that comprehends two distinct dialogs: The action dialog (Send Message) and the split dialog (Wait for response). In general, we recommend starting a flow with a Send Message action, but you can find a more apropriated rule set.
 
 Actions Editor
@@ -21,21 +23,23 @@ The split editor allows you to create articulation points in your flow on the fo
 4.The categories that the correspondents values to response rules are located.
 5.The given name to the resulted variable.
 
-3. Simulator
+**3. Simulator**
+
 The simulator is a tool for you test your flows as a final user. When clicked, the simulator will start the first step on your flow.
 
-4. Menu Configurations
+**4. Menu Configurations**
+
 TALK MORE ABOUT THE MENU CONFIGURATIONS
 
 Results
 Click on the results options to see the results connected to the editing flow.
 
 Edit 
-1. Click on the  Edit option
-2. Alter the flows name
-3. Attribute triggers to the flow
-4. Adjust the flow expiration window
-5. Define that the flow ignores triggers when the contact is already on the flow.
+ 1. Click on the  Edit option
+ 2. Alter the flows name
+ 3. Attribute triggers to the flow
+ 4. Adjust the flow expiration window
+ 5. Define that the flow ignores triggers when the contact is already on the flow.
 
 INSERT A PRINT
  
@@ -53,7 +57,7 @@ INSERT A PRINT
 Delete
 Click on this option to delete the flow that you are editing.
 
-5. Start a Flow
+**5. Start a Flow**
 Click on this button to put the contacts on the flow. You can add specifics contacts or groups. Select the “Restart any contacts above that are on the flow” if you want to restart the actives members on the flow.
 
  INSERT A PRINT
