--- a/06.04-Know the Flow Editor.md
+++ b/06.04-Know the Flow Editor.md
@@ -10,18 +10,19 @@ The given name to the created flow.
 
 This button opens the steps editors, that comprehends two distinct dialogs: The action dialog (Send Message) and the split dialog (Wait for response). In general, we recommend starting a flow with a Send Message action, but you can find a more apropriated rule set.
 
-Actions Editor
+- Actions Editor
+
 The actions editor starts with the action Send Message, although you can click on the drop-down menu to alter a lot of actions dialogs. To access the split editor, click on the ramification icon on the top right of the action editor.
 
 INSERT A PRINT
 
-Split Editor
-The split editor allows you to create articulation points in your flow on the form of conditionals declarators. As explained in our introductory page, the rules editor is composed by:
-1.A type of value -  “When someone is on this flow point…”
-2.Responses rules that evaluated the type of selected value - “If the message response…”
-3.The specifics values that you are evaluating for
-4.The categories that the correspondents values to response rules are located.
-5.The given name to the resulted variable.
+- Split Editor
+ The split editor allows you to create articulation points in your flow on the form of conditionals declarators. As explained in our introductory page, the rules editor is composed by:
+ 1. A type of value -  “When someone is on this flow point…”
+ 2. Responses rules that evaluated the type of selected value - “If the message response…”
+ 3. The specifics values that you are evaluating for
+ 4. The categories that the correspondents values to response rules are located.
+ 5. The given name to the resulted variable.
 
 **3. Simulator**
 
@@ -58,6 +59,7 @@ Delete
 Click on this option to delete the flow that you are editing.
 
 **5. Start a Flow**
+
 Click on this button to put the contacts on the flow. You can add specifics contacts or groups. Select the “Restart any contacts above that are on the flow” if you want to restart the actives members on the flow.
 
  INSERT A PRINT
