--- a/06.04-Know the Flow Editor.md
+++ b/06.04-Know the Flow Editor.md
@@ -19,10 +19,10 @@ INSERT A PRINT
 - Split Editor
 
  The split editor allows you to create articulation points in your flow on the form of conditionals declarators. As explained in our introductory page, the rules editor is composed by:
- 1. A type of value -  “When someone is on this flow point…”
- 2. Responses rules that evaluated the type of selected value - “If the message response…”
- 3. The specifics values that you are evaluating for
- 4. The categories that the correspondents values to response rules are located.
+ 1. A type of value -  “When someone is on this flow point…”;
+ 2. Responses rules that evaluated the type of selected value - “If the message response…”;
+ 3. The specifics values that you are evaluating for;
+ 4. The categories that the correspondents values to response rules are located;
  5. The given name to the resulted variable.
 
 **3. Simulator**
@@ -33,30 +33,35 @@ The simulator is a tool for you test your flows as a final user. When clicked, t
 
 TALK MORE ABOUT THE MENU CONFIGURATIONS
 
-Results
+#### Results ####
+
 Click on the results options to see the results connected to the editing flow.
 
-Edit 
- 1. Click on the  Edit option
- 2. Alter the flows name
- 3. Attribute triggers to the flow
- 4. Adjust the flow expiration window
+#### Edit ####
+
+ 1. Click on the  Edit option;
+ 2. Alter the flows name;
+ 3. Attribute triggers to the flow;
+ 4. Adjust the flow expiration window;
  5. Define that the flow ignores triggers when the contact is already on the flow.
 
 INSERT A PRINT
  
-Copy
+#### Copy ####
+
 Click on this option to make an identical copy of the editing flow.
 
-Export
+#### Export ####
+
 Click on this option to export a flow that you are editing as a JSON file.
 
-Review Historical
+#### Review Historical ####
+
 Click on this option to visualize the review historical flow that you are editing. Click on a review to see the flow version or return to that point.
 
 INSERT A PRINT
 
-Delete
+#### Delete ####
 Click on this option to delete the flow that you are editing.
 
 **5. Start a Flow**
