--- a/06.08-Sending a Message Through the Flow.md
+++ b/06.08-Sending a Message Through the Flow.md
@@ -2,6 +2,8 @@
 
 On the example below, we create an action “Send Message” that sends a message to people who indicate interest in Alagoas, if they want to receive additional information about the State. Send a message, in the platform standard action flow, they are created every time that you drag a call from the red square on the button of each ActionSet or RuleSet.
 
+INSERT A PRINT
+
 **Characters Limites** 
 
 If a Send Message action exceds 160 characters, the message will be divided and send in two messages. There is a counter below the dialog box showing how many characters you can use until the 160 characters typed. On the example below, the message has 54 characters.
