Update and rename 06.11-Classifing Contacts in Groups to 06.11-Classifing and Deleting Contacts in Groups.md

--- a/06.11-Classifing and Deleting Contacts in Groups.md
+++ b/06.11-Classifing and Deleting Contacts in Groups.md
@@ -1,4 +1,5 @@
-Adding contacts to a group
+#### Adding contacts to a group ####
+
 Use the action “Add contact to a group” to add contacts to a group from a flow.
 
 INSERT A PRINT
@@ -7,7 +8,8 @@ On the example below, we are adding the users who selected Alagoas as a State. T
 
 Insert a Print
 
-Deleting Contacts from a Group
+#### Deleting Contacts from a Group ####
+
 Use the “Remove contact from a group” to remove a contact from a group on the flow.
 
 Insert a print
