Update and rename 06.13-Sending an Email to en/flows/06.13-Sending an Email.md

--- a/en/flows/06.13-Sending an Email.md
+++ b/en/flows/06.13-Sending an Email.md
@@ -1,4 +1,4 @@
-Use the Send an Email to send an Email using the flow. The resulting email can contain values referred using:
+**Use the *Send an Email* to send an Email using the flow. The resulting email can contain values referred using:**
 
 @contact variáveis
 @flow variáveis
@@ -8,9 +8,17 @@ Use the Send an Email to send an Email using the flow. The resulting email can c
 @extra
 expressões, ex.: @ (HOUR (NOW ()))
 
+#### To send an Email ####
+1. Go to your flow;
+2. Click on and drag the red box to create a new action command.
+3. Select the option Send an Email on the drop-down menu.
+
+INSERT A PRINT
+
 On the example below, we demonstrate how a company can use this action to send an email with a notification to the team informing that there is a client is requesting information about a product.
 
-Creating a Pipeline Email
+#### Creating a Pipeline Email ####
+
 This action is a super simple way to send a question from a contact to a team member. You just need to create a flow asking for a contact name, question and favorite response method, configure the RapidPro to send an email containing this information outside the RapidPro or slack channel. The team members are capable to instantaneously access the ticket through your CRM or Slack ID and response appropriately.
 
 INSERT A PRINT
