Update and rename 06.14-Starting Another Flow to en/flows/06.14-Starting Another Flow.md

--- a/en/flows/06.14-Starting Another Flow.md
+++ b/en/flows/06.14-Starting Another Flow.md
@@ -1,9 +1,10 @@
-Use the Start Another Flow to move your contacts from a flow to another one. When a contact passes through this step, the contact will be removed from the actual flow to start another one. 
+Use the *Start Another Flow* to move your contacts from a flow to another one. When a contact passes through this step, the contact will be removed from the actual flow to start another one. 
 On the example below, we are directing the contacts according to the type of support needed.
 
 Insert a Print
 
-@extra variable
+**@extra variable**
+
 When a Start Another Flow is located into the flow, all flow variables created until that step are passed to the next flow. Into the new flow, collected variables on the previous flow are referred using the prefix @extra.
 For example, If you collect the contact's age (@flow.age) and localization (@flow.localization) in A flow, after that, use Start Another Flow to move the contact to a new flow, the B flow, you can refer the previously collected variables called @extra.flow.age and @extra.flow.localization:
 
