--- a/en/flows/06.15- Start Someone Else in Flow.md
+++ b/en/flows/06.15- Start Someone Else in Flow.md
@@ -2,7 +2,7 @@ Use Start Someone Else in a Flow to put a contact or a separated group into a fl
 
 Insert a Print
 
-Creating a New Contact
+#### Creating a New Contact ####
 
 This action can be used to create a new contact on the flow.
 On the example below, Patient Register, the contacts are being invited to present the patients' names and phone number registered. When the information is collected, the Start Someone Else in a flow unleashed a new flow, Create a New Patient, a contact with the standard field will be created. Name and phone number are filled using an actualization from a contact variables flow (@flow.name and @flow.phone) collected on the previous flow, patient register. 
@@ -18,10 +18,10 @@ When the contacts phone number starts the flow  “Creating Contact”, it will 
 
 INSERT A PRINT
 
-Using @new_contact
+#### Using @new_contact ####
 Imagine that you would like to be the only contact - a pregnant woman, for example - to receive tickets related to pregnancy, and tickets related to medical assistance to other children. The key is created different profiles for each child, all contacts containing the mother's phone number, so, she can receive campaign events for each child.
 
-Creating Additional Contacts
+**Creating Additional Contacts**
 First, you need to have a mother on a flow to get important information about each child, so all execution will result in a new contact child.
 
 INSERT A PRINT
@@ -30,7 +30,7 @@ After to collect relevant information about the child, you will use @new_contact
 
 INSERT A PRINT
 
-Actualize the User Profile
+**Actualize the User Profile**
 The next flow will contain a series of contacts actualization that will actualize the collected values on the previous flow (name, sex, age) to the child's reserved space.
 
 INSERT A PRINT
@@ -45,7 +45,7 @@ INSERT A PRINT
 
 When the child's profile is created is possible to attribute them in your own campaign.
 
-Sending Information to a Child 
+**Sending Information to a Child**
 To send information to a mother about her son,  you will need it to create a campaign event that will be sent to a child's contact profile containing a Send a Message to Someone Else or Start Someone Else in a Flow to send a message to the mother. The address that you will use is the contact field containing the mother's phone number, @contact.mother_phone.
 
 INSERT A PRINT
