Update and rename 06.16- Rule Set to en/flows/06.16- Rule Set.md

--- a/en/flows/06.16- Rule Set.md
+++ b/en/flows/06.16- Rule Set.md
@@ -1,17 +1,17 @@
 Rule Set are connection points on a flow. They are conditional declarations allowing to direct your contacts using:
 
-A message received or recorded 
-A contact field
-A flow variable
-A form field
-An expression
-Rule Set Anatomy
+- A message received or recorded 
+- A contact field
+- A flow variable
+- A form field
+- An expression
+- Rule Set Anatomy
 
 INSERT A PRINT
 
 Rule Sets comprehends 5 entries that allow building a powerful conditional instruction:
 
-(a) The type of rule set that you would like to create:
+1. The type of rule set that you would like to create:
 
 INSERT A PRINT
 
@@ -29,32 +29,32 @@ INSERT A PRINT
 
 * Flow contact comprehends the available variables on a determined flow. These are flow variables using action sets, but you can also include associated contacts variables from a contact associated with a contact through a flow, or obtained data from an external font through a webhook.
 
-(b) According to the selected command, this is the value that the rules are evaluated. This value, call an operator, represented for a variable or expression. The ruleset on the picture above, “if the response message ..” indicates that the operator is @step.value or a received message.
-(c) Response Rules: evaluate the selected operator. Response rules are executed from left to right. The first rule that corresponds is used and not the other rules, that will be evaluated after that. RapidPro combines each word just once and just to an individual rule in the original string order.
+2. According to the selected command, this is the value that the rules are evaluated. This value, call an operator, represented for a variable or expression. The ruleset on the picture above, “if the response message ..” indicates that the operator is @step.value or a received message.
+3. Response Rules: evaluate the selected operator. Response rules are executed from left to right. The first rule that corresponds is used and not the other rules, that will be evaluated after that. RapidPro combines each word just once and just to an individual rule in the original string order.
 
 INSERT A PRINT
 
-(d) The response from your values rules will try to correspond to the operator. On the example above, we create a ruleset trying to correspond to the name of each city from Alagoas. Using the “Wait for response” ruleset the selected answer from “has any of these words”, the received answer will be located on a category called “Alagoas” if it corresponds to any listed word. This allows us to write the answer “I live in Maceió” on the category “Alagoas” because the word “Maceió” is on the rule. Notice that, a flow will always correspond at least a response rule.
+4. The response from your values rules will try to correspond to the operator. On the example above, we create a ruleset trying to correspond to the name of each city from Alagoas. Using the “Wait for response” ruleset the selected answer from “has any of these words”, the received answer will be located on a category called “Alagoas” if it corresponds to any listed word. This allows us to write the answer “I live in Maceió” on the category “Alagoas” because the word “Maceió” is on the rule. Notice that, a flow will always correspond at least a response rule.
 
-(e) The category where your contacts are located with the answer corresponds to the correspondent response rule. The categories are ways where the connections can the guided to the new step.
+5. The category where your contacts are located with the answer corresponds to the correspondent response rule. The categories are ways where the connections can the guided to the new step.
 
 INSERT A PRINT
 
-(f) The name gave to the created flow variable is filled for a ruleset. On the example above, the ruleset will save the evaluation result for the flow variable @flow.state.
+6. The name gave to the created flow variable is filled for a ruleset. On the example above, the ruleset will save the evaluation result for the flow variable @flow.state.
 The entries above result on the following conditional declaration:
 When somebody arrives at this point on your flow, wait for a response. If the response has any of these -. Maceió, Maragogi, Arapiraca, etc. - classify as Alagoas every response with a flow variable called ‘State’.
 
-Active vs Passive Splitter
+#### Active vs Passive Splitter ####
 You can look that the dialog box from the split response set is blue, while the rest of then is grey:
 
-Actives:
+**Actives:**
 
 INSERT A PRINT
 
 Split responses are actives. They need a contact response, with a value to be evaluated (contact response) is not initially knew.
 
 
-Passives: 
+**Passives:**
 Passives steps don't require contacts response, because the values to be evaluated are already know. So, the contacts passed for a series of passives splits will not count as a credits relationship.
 The passives steps include:
 Calling a Webhook;
