--- a/en/flows/06.17- Response Rule.md
+++ b/en/flows/06.17- Response Rule.md
@@ -8,7 +8,7 @@ INSERIR IMAGEM
 
 Notice that, the response rule combining with categories names will be represented as a category into the rule set from a flow editor.
 
-Examples:
+**Examples:**
 
 The response rules allow you:
 
@@ -17,13 +17,13 @@ Alter the numerical answers to narrative answer or the opposite. For example, if
 Inesparated responses are sent directly to the “Others” category. For example, if you are asking your contacts about gender and receive the answer “Cat”, this answer will be categorized as  “Others”.
 Translate the answers, so the affirmative answers like “Yego” (Kinyarwanda) or “Si” (Spanish) are categorized as “Yes”.
 
-Special Response Rules
+## Special Response Rules ##
 
-Has a phone number
+**Has a phone number**
 
 You can use the “has a phone number” to validates the answer including something that looks like a valid phone number. The answer will be saved as a qualified number. For example, if someone answers with the number 0788123123, this number will be saved as 250.788.123.123. If the valid phone number is not presented, you can ask the contacts to answer again.
 
-Matches Regex
+**Matches Regex**
 
 In some cases, to validate an identification number or a coupon code, you can need a more complicated rule to determine if this is a validate answer. Regex is a standard used to describe an acceptable presentation format. A big resource to test your regular expressions is Regex101, that allow you to test any answer waited for a regular expression.
 For example, if we are asking someone to introduce a serial number from the registered device.
@@ -34,12 +34,14 @@ We know that the validates serial number should start with the “U” and has e
 
  INSERT A PRINT
  
-Some observations about regular expressions:
+## Observations about regular expressions: ##
+
 They are not case sensitive (they don't differ upper and lower case), so you don't need to put different options on the box base.
 The  “groups” of regular expressions are available after the register using @extra. The group 0 is available as @extra.0, the first group as @extra.1.
 The value saved on the flow will be the group 0.
  
-Collect different selections
+## Collect different selections: ##
+
 Notice that, although collect a unique response to a question with various options, you can use the “has a number equal to” to catch multiple choose with an only one answer. There is an example:
 Choose your favorite color: “Send a message” below ask the user to choose his favorite color, or select multiples if he has more than one. Each choose is coded by a number, that allows you to collect different selections in numerical order. This will avoid the necessity to answer all possible combinations.
  
