--- a/en/flows/06.21-Referencing the Variables.md
+++ b/en/flows/06.21-Referencing the Variables.md
@@ -1,17 +1,20 @@
-Contacts Variables
+## Contacts Variables ##
+
 @contact variable represents contacts field value specific for each contact presents in a flow.
-@contact – The contacts full name if have, if not, his/her phone number, for example, “Ben Haggerty”.
-@Contact.name – As above, the contacts full name if have, if not, his/her phone number, for example, “Ben Haggerty”.
-@Contact.first_name – The contacts first name, if it was defined, if not, his/her phone number, for example, “Ben”.
-@Contact.tel – The contacts phone number in a legible format, for example, “(206) 555 1212”.
-@Contact.tel_e164 – The contacts phone number in the E164 format, for example, “+12065551212”.
-@Contact.groups – The groups that the contact have been located.
-@Contact.uuid – The exclusive identification universally attributed to each contact.
-@contact [Contato-field] – Any field that you created for your contacts, for example, “@Contact.age”.
+
+**@contact** – The contacts full name if have, if not, his/her phone number, for example, “Ben Haggerty”.
+**@Contact.name** – As above, the contacts full name if have, if not, his/her phone number, for example, “Ben Haggerty”.
+**@Contact.first_name** – The contacts first name, if it was defined, if not, his/her phone number, for example, “Ben”.
+**@Contact.tel** – The contacts phone number in a legible format, for example, “(206) 555 1212”.
+**@Contact.tel_e164** – The contacts phone number in the E164 format, for example, “+12065551212”.
+**@Contact.groups** – The groups that the contact have been located.
+**@Contact.uuid** – The exclusive identification universally attributed to each contact.
+**@contact [Contato-field]** – Any field that you created for your contacts, for example, “@Contact.age”.
 
 INSERT A PRINT
 
-Flow Variables 
+## Flow Variables ##
+
 @flow variables refer to values collected in each RuleSet into a flow. @flow variables just inform the values collected by the flow that they are called. This allows you to refer to the values previously collected or contacts actualization fields with a value sent by a contact. The variable name will correspond with the result name from the collected RuleSet.
 
 INSERT A PRINT
@@ -51,7 +54,7 @@ Channel Variable(@Channel)
 @channel.tel – the phone number that received the last contact message, in a legible format, for example, “(206) 555 1212”;
 @Channel.tel_e164 – the E164 format from a phone number that received the last message from a contact, for example, “+12065551212”.
 
-Data Variable
+## Data Variable ## 
 @date variables are referred to time values according to the time zone attributed to your account. Observe that the variable format @date depends on the format data configuration. 
 @Date - The actual date and time, for example, “2014/02/05 20:08”
 @Date.now- The actual date and time, for example, “2014/02/05 20:08”
@@ -59,5 +62,5 @@ Data Variable
 @Date.tomorrow - The tomorrow date, for example, “2015/03/05”
 @Date.yesterday - The yesterday date, for example, “2014/01/05”
 
-Extras Variables
+## Extras Variables ##
 @extra refers to variables extracted from an external application through a webhook, or if the flow is started for a Start Another Flow action, the flow variables associated with the contact on the previous flow, for example, @Extra.flow.response_1. If Start Someone Else in a Flow action was used to start flow, @extra can be also used to make references to previous contact fields (with @step variables).
