Update 06.21-Referencing the Variables.md

--- a/en/flows/06.21-Referencing the Variables.md
+++ b/en/flows/06.21-Referencing the Variables.md
@@ -26,7 +26,7 @@ INSERT A PRINT
 
 INSERT A PRINT
 
-When you type @flow in a step, you will see a drop-down menu with a list of variables on the flow that will be filled automatically.
+When you type *@flow* in a step, you will see a drop-down menu with a list of variables on the flow that will be filled automatically.
 
 INSERT A PRINT
  
@@ -43,17 +43,22 @@ The responses from your contacts can be referred with @flow.[prefix], in the cas
 INSERT A PRINT
  
 Here is an extensive list that you can use to filer the flow variables according to your necessities [variable name], is a reserved space for any result presenting in the flow.
-@flow - All flow variables collected until this point, for example, “Name: Jane, Age: 32”;
-@flow.[variable name] – The collected value, for example, @flow.age, “32”;
-@flow.[variable name].category - The category is evaluated for, for example,  “Valide”;
-@flow.[variable name].text - The entire text is evaluated using a Rule Set, for example, “I am 32 years old”;
-@flow.[variable name].time - The date and time when a flow value was collected, for example, “02/04/2016 19:11:50” (according to the date/time format).
-Referencing a contact into the flow
+
+**@flow** - All flow variables collected until this point, for example, “Name: Jane, Age: 32”;
+**@flow.[variable name]** – The collected value, for example, @flow.age, “32”;
+**@flow.[variable name].category** - The category is evaluated for, for example,  “Valide”;
+**@flow.[variable name].text** - The entire text is evaluated using a Rule Set, for example, “I am 32 years old”;
+**@flow.[variable name].time** - The date and time when a flow value was collected, for example, “02/04/2016 19:11:50” (according to the date/time format).
+
+## Referencing a contact into the flow ##
+
 There are two ways to reference contact fields in the flow:
 
-@contact - Refer the contact that is receiving the message. On most of the cases, this is an active contact. Use the “ Send the Message to Someone”, @contact refer to the contact or contact group that will receive the message.
-@Step.contact – Refer to the contact that sends the last message processed on the flow. On most of the cases, this is an active contact. Using the “Send an Action Response SMS”, @step.contact and @contact are the same contacts.  Using the “Send a Message to Someone”, @step.contact refer to the contact that received the message from “Send a Message to Someone” in the flow, through triggers.
-Channel Variable(@Channel)
+**@contact** - Refer the contact that is receiving the message. On most of the cases, this is an active contact. Use the “ Send the Message to Someone”, @contact refer to the contact or contact group that will receive the message.
+
+**@Step.contact** – Refer to the contact that sends the last message processed on the flow. On most of the cases, this is an active contact. Using the “Send an Action Response SMS”, @step.contact and @contact are the same contacts.  Using the “Send a Message to Someone”, @step.contact refer to the contact that received the message from “Send a Message to Someone” in the flow, through triggers.
+
+## Channel Variable(@Channel) ##
 
 @Channel variables refer to a channel through a received message. For example, if a contact sends a message through an Android channel connected to his account, the variable @channel will be referred to a number attributed to the SIM card.
 @channel - the phone number that received the last message from the contact, in a legible format, for example, “(206) 555 1212”;
