Update 06.21-Referencing the Variables.md

--- a/en/flows/06.21-Referencing the Variables.md
+++ b/en/flows/06.21-Referencing the Variables.md
@@ -65,18 +65,27 @@ There are two ways to reference contact fields in the flow:
 ## Channel Variable(@Channel) ##
 
 @Channel variables refer to a channel through a received message. For example, if a contact sends a message through an Android channel connected to his account, the variable @channel will be referred to a number attributed to the SIM card.
-@channel - the phone number that received the last message from the contact, in a legible format, for example, “(206) 555 1212”;
-@channel.name - the channel name (that can be edited clicking on the channel) ex: “Nexus 5”;
-@channel.tel – the phone number that received the last contact message, in a legible format, for example, “(206) 555 1212”;
-@Channel.tel_e164 – the E164 format from a phone number that received the last message from a contact, for example, “+12065551212”.
+
+**@channel** - the phone number that received the last message from the contact, in a legible format, for example, “(206) 555 1212”;
+
+**@channel.name** - the channel name (that can be edited clicking on the channel) ex: “Nexus 5”;
+
+**@channel.tel** – the phone number that received the last contact message, in a legible format, for example, “(206) 555 1212”;
+
+**@Channel.tel_e164** – the E164 format from a phone number that received the last message from a contact, for example, “+12065551212”.
 
 ## Data Variable ## 
 @date variables are referred to time values according to the time zone attributed to your account. Observe that the variable format @date depends on the format data configuration. 
-@Date - The actual date and time, for example, “2014/02/05 20:08”
-@Date.now- The actual date and time, for example, “2014/02/05 20:08”
-@Date.today - The actual date, for example, “2014/02/05”
-@Date.tomorrow - The tomorrow date, for example, “2015/03/05”
-@Date.yesterday - The yesterday date, for example, “2014/01/05”
+
+**@Date** - The actual date and time, for example, “2014/02/05 20:08”
+
+**@Date.now** - The actual date and time, for example, “2014/02/05 20:08”
+
+**@Date.today** - The actual date, for example, “2014/02/05”
+
+**@Date.tomorrow** - The tomorrow date, for example, “2015/03/05”
+
+**@Date.yesterday** - The yesterday date, for example, “2014/01/05”
 
 ## Extras Variables ##
 @extra refers to variables extracted from an external application through a webhook, or if the flow is started for a Start Another Flow action, the flow variables associated with the contact on the previous flow, for example, @Extra.flow.response_1. If Start Someone Else in a Flow action was used to start flow, @extra can be also used to make references to previous contact fields (with @step variables).
