Update and rename 06.22-Visualizing and Exporting Variables to en/flows/06.22-Visualizing and Exporting Variables.md

--- a/en/flows/06.22-Visualizing and Exporting Variables.md
+++ b/en/flows/06.22-Visualizing and Exporting Variables.md
@@ -1,4 +1,4 @@
-Visualizing Results
+## Visualizing Results ##
 When your contacts interact with a flow, your answers will be storage as a flow result that you can access selecting “Results”  on the drop-down menu on the configure icon on the flow editor.
 
 INSERT A PRINT
@@ -10,53 +10,60 @@ Expires the flow after an inactive period (you determine it).
 
 INSERT A PRINT
  
-Visualizing Runs
+## Visualizing Runs ##
 Clicking on the contact Runs value from a contact that will  leave you to a page that shows the content from each Run, through a simulator.
 
 INSERT A PRINT
 
 Runs comprehend the lines that compound your exporting results spreadsheet where each column will contain the following information:
-UUID
-Phone number or address
-Groups
-The moment when your Run started
-The moment when your Run finished
-and the responses for each question
+
+- UUID
+- Phone number or address
+- Groups
+- The moment when your Run started
+- The moment when your Run finished
+- and the responses for each question
 
 INSERT A PRINT
 
-Exporting the results from multiple flows
+## Exporting the results from multiple flows ##
+
 To export results from various flows, go to the “flows” guide and select the flows boxes that you would like to export, after that, click on the exportation icon that is located on the top of your flows when you select one or more flows.
 
 INSERT A PRINT
 
-Downloading the results
+## Downloading the results ##
+
 After click on the “Download Resulting” button, the flow exportation resulting dialog box will appear.
 
 INSERT A PRINT
 
-Here, you can opt for:
-Include the fields with up to 10 contacts with values that will be exported in each run;
-Just the exporting contacts results that answered;
-Export all sending and received messages on the flow;
-Includes all Runs for each contact.
+**Here, you can opt for:**
+
+- Include the fields with up to 10 contacts with values that will be exported in each run;
+- Just the exporting contacts results that answered;
+- Export all sending and received messages on the flow;
+- Includes all Runs for each contact.
+
 After to click on ‘OK’, will present a request indicating a link to a page where you could download the results that were sent to email address associated with your account.
 Depending the selected configurations that you selected on the dialog box ‘Resulting Exportation Flow’,  the XLS exported will contain 3 guides:
 
-Runs: A contact can pass through a flow more than once, so the guide Runs exhibit how many times the contact passed by.
+**Runs:** A contact can pass through a flow more than once, so the guide Runs exhibit how many times the contact passed by.
 Contacts: The contacts guide show the last run values (and the last value for each step on the flow, and what can been visited more than once, if the contact has never been redirected for him).
-Messages: On the messages, guide is showed all send messages from or to your contacts flow. It provides the message direction (IN/OUT), text, date, and contact information.
+
+**Messages:** On the messages, guide is showed all send messages from or to your contacts flow. It provides the message direction (IN/OUT), text, date, and contact information.
 Here is a example how the executed guide from an exportation spreadsheet can appear:
 
 INSERT A PRINT
 
-Here are the attributes answers on the split step that categorize the responses to this message (age):
+**Here are the attributes answers on the split step that categorize the responses to this message (age):**
 
 INSERT A PRINT
 
 Each response is presented in three columns - Category, value, and text:
-The column Category contains the category where the contact response was located according to the response rules attributed.
-As the message above indicates, any answer containing 1, y, sim, s or yes is classified as Yes.
-The value column contains the value catched for a response rule.
-If the received message read “Yes or No”, the collected value will be Yes because the response contained a valued correspondent to a word that you specified using the Has Any of These Words. In the other way, if a contact answer just with one of the words specified by the response rule (Yes), the value and text columns will contain the same value.
-The text column contains the complete response text, for example, “Yes, I am.”
+
+- The column Category contains the category where the contact response was located according to the response rules attributed. As the message above indicates, any answer containing 1, y, sim, s or yes is classified as Yes.
+
+- The value column contains the value catched for a response rule. If the received message read “Yes or No”, the collected value will be Yes because the response contained a valued correspondent to a word that you specified using the Has Any of These Words. In the other way, if a contact answer just with one of the words specified by the response rule (Yes), the value and text columns will contain the same value.
+
+- The text column contains the complete response text, for example, “Yes, I am.”
